# discord-emotes

./: .env.example  .gitignore  Cargo.toml
src/: main.rs  providers.rs
src/providers/: seventv.rs  twitch.rs
