[package]
name = "discord-emotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
rayon = "1.5.3"
reqwest = { version = "0.11.11", features = ["json", "native-tls", "blocking"], default-features = false }
rotenv = "0.15.0"
rotenv_codegen = "0.15.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.34"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
